# codex-native

./: .codespellignore  .codespellrc  .codex-curated-ids.json  .codex-pr-threads.json  .gitignore  AGENTS.md  CACHING.md  MULTI_AGENT_V2_README.md  REVERIE_IMPROVEMENTS_RESULTS.md  REVERIE_IMPROVEMENTS_SUMMARY.md  SMART_FORKING_ANALYSIS.md  announcement_tip.toml  conceptual-similarity-analysis.md  justfile  manual-verification.md  merge-conflict-solver.ts  multi-agent-codex-system.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr-worktree-codex.mjs  pr-worktree-codex.ts  rusttest  test-conversation-context-search.ts  test-multi-vector-conceptual.ts  test-multiple-conversations.ts  test-real-conversation-search.ts  test-reasoning-similarity.ts  test-reverie-actual-problems.ts  test-reverie-comprehensive.ts  test-reverie-conversation-search.ts  test-reverie-improvements.ts  test-reverie-real-world-comprehensive.ts  test-reverie-real-world.ts  test-reverie-specific.ts  test-reverie-weak-areas.ts  testagent.ts  tsconfig.json  tsconfig.multi-agent.json  tsconfig.pr-worktree.json  (+1 more)
codex-rs/: ci.sh  (+3 more)
sdk/native/: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  TESTS_README.md  build.rs  index.d.ts  index.js  jest.config.cjs  package-lock.json  package.json  test-napi-debug.js  test-napi-integration.js  test-native.js  tsconfig.examples.json  tsconfig.json  tsup.config.ts
sdk/native/dist-examples/examples/: agents-integration.js  agents-with-tools.js  automatic-tool-registration.js  codex-provider-direct.js  codex-provider-global.js  codex-provider-run.js  review-example.js  streaming-deltas.js
sdk/native/dist-examples/src/: codex.js  events.js  exec.js  index.js  items.js  nativeBinding.js  outputSchemaFile.js  reviewOptions.js  thread.js
sdk/native/examples/: AGENT_APPROVALS.md  README.md  agent-graph-demo.ts  agent-workflow-tracker.ts  agents-integration.ts  agents-with-tools.ts  attach-tui-to-running-thread.ts  automatic-tool-registration.ts  background_events.ts  basic_streaming.ts  codex-provider-direct.ts  codex-provider-global.ts  codex-provider-run.ts  dual-agent-collab.ts  dual-agent-with-approvals.ts  fork-thread.ts  git-graph-demo.ts  github-provider-models.ts  import-test.ts  review-example.ts  simple-git-graph.ts  skills.ts  streaming-deltas.ts  structured_output.ts  test-graph.ts  tool-override-example.ts  tsconfig.json  utils.ts
sdk/native/examples/agents/: EXAMPLES_GUIDE.md  agents-fork-into-new-agent.ts  agents-guardrails.ts  agents-handoffs.ts  agents-integration.ts  agents-multi-agent-workflow.ts  agents-streaming.ts  agents-structured-output.ts  agents-tracing.ts  agents-with-tools.ts  context-sessions.ts  guardrails-validation.ts  multi-agent-handoffs.ts  real-world-code-refactor.ts  streaming-responses.ts  structured-output.ts
sdk/native/examples/basic/: plan-management.ts  repo-diff-summary.ts  review-example.ts  streaming-deltas.ts
sdk/native/examples/diagnostics/: gh-network-check.ts
sdk/native/examples/embeddings/: fast-embed.ts
sdk/native/examples/provider/: codex-provider-direct.ts  codex-provider-global.ts  codex-provider-run.ts
sdk/native/examples/reverie/: manual-semantic-search.ts
sdk/native/examples/tools/: automatic-tool-registration.ts  tool-override-example.ts
sdk/native/examples/tui/: README.md  launch-cli.ts  programmatic-launch.ts  thread-transition.ts
sdk/native/examples/utils/: mock-responses-server.ts
sdk/native/rust-bindings/: cloud_tasks.rs  events.rs  fast_embed.rs  git.rs  lib.rs  reverie.rs  run.rs  test.rs  tokenizer.rs  tools.rs  toon.rs  tui.rs  tui_components.rs
sdk/native/rust-bindings/graph/: mod.rs
sdk/native/rust-bindings/reverie/: api.rs  json_utils.rs  storage.rs  types.rs
sdk/native/rust-bindings/run/: cli_builder.rs  execution.rs  model_validation.rs  parsing.rs  schema.rs  tests.rs  thread_ops.rs  types.rs
sdk/native/rust-bindings/tools/: tests.rs
sdk/native/scripts/: build-all.mjs  bump.mjs  ensure-trailing-newline.mjs  publish-platform-packages.mjs  publish-sdk.mjs  publish.mjs  release.mjs  run-jest.mjs  sync-optional-deps.mjs
sdk/native/scripts/reverie/: generate-episode-summaries.ts
sdk/native/src/: cloudTasks.ts  codex.ts  codexOptions.ts  events.ts  exec.ts  gitGraphRenderer.ts  index.ts  merge-conflict-solver.ts  nativeBinding.ts  outputSchemaFile.ts  reviewOptions.ts  skills.ts  thread.ts  threadLogging.ts  threadOptions.ts  tui.ts  turnOptions.ts
sdk/native/src/agents/: ClaudeAgent.ts  CodexProvider.ts  OpenCodeAgent.ts  approvalBridge.ts  codexTool.ts  index.ts  streamFormatter.ts  toolRegistry.ts  types.ts
sdk/native/src/cli/: config.ts  elevatedDefaults.ts  hooks.ts  index.ts  lspBridge.ts  optionParsers.ts  reverie.ts  run.ts  runtime.ts  tui.ts  types.ts
sdk/native/src/events/: convert.ts
sdk/native/src/logging/: index.ts  logger.ts  threadLogger.ts  types.ts
sdk/native/src/lsp/: bridge.ts  client.ts  format.ts  hooks.ts  index.ts  manager.ts  servers.ts  types.ts
sdk/native/tests/: agents-handoffs.test.mjs  agents-handoffs.test.ts  agents-integration.test.mjs  agents-integration.test.ts  agents-models-defaults.test.mjs  agents-models-defaults.test.ts  agents-provider-tools-interop.test.mjs  agents-provider-tools-interop.test.ts  agents-runner-basic.test.mjs  agents-runner-basic.test.ts  agents-structured-output-provider.test.mjs  agents-structured-output-provider.test.ts  agents-tools.test.mjs  agents-tools.test.ts  agents-zod-tools-provider.test.mjs  agents-zod-tools-provider.test.ts  apply-patch.test.ts  approval-callback.test.ts  claude-agent.test.ts  claude-cli-integration.test.ts  cli-config-loader.test.ts  cli-lsp-bridge.test.ts  cli-tui-smoke.test.ts  cli_builder.rs  cloud-tasks.test.mjs  cloud-tasks.test.ts  codex-provider-tool-path.test.ts  codex-provider.test.mjs  codex-provider.test.ts  codexTool-integration.test.ts  config_builder.rs  conversation-api.test.ts  env_helpers.rs  event_conversion.rs  events-convert.test.ts  fast-embed.test.ts  fast_embed.rs  github-provider.live.test.ts  handler-error.test.mjs  handler-error.test.ts  (+45 more)
(+354 files in other folders)
