
[package]
name = "codex_native"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust-bindings/lib.rs"

[dependencies]
serde_json = "1"
tempfile = "3"
async-trait = "0.1"
anyhow = "1"

[dependencies.napi]
version = "3"
features = ["tokio_rt","serde-json","compat-mode","napi8"]
optional = true

[dependencies.napi-derive]
version = "3"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["macros","rt-multi-thread"]

[dependencies.codex-common]
path = "../../codex-rs/common"

[dependencies.codex-core]
path = "../../codex-rs/core"

[dependencies.codex-exec]
path = "../../codex-rs/exec"

[dependencies.codex-protocol]
path = "../../codex-rs/protocol"

[dependencies.codex-cloud-tasks-client]
path = "../../codex-rs/cloud-tasks-client"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
napi-bindings = ["napi", "napi-derive"]

[profile.release]
lto = true
strip = "symbols"
