
[package]
name = "codex_native"
version = "0.0.2"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "rust-bindings/lib.rs"

[dependencies]
serde_json = "1"
tempfile = "3"
async-trait = "0.1"
anyhow = "1"
ratatui = "0.29.0"
vt100 = "0.16.2"
regex = "1"
sha1 = "0.10"
fastembed = { version = "5.2", features = ["online"] }
ort = { version = "2.0.0-rc.10", features = ["coreml"] }
toon-rust = "0.1.3"
stop-words = "0.8"
rust-stemmers = "1.2"
chrono = "0.4"

[dependencies.napi]
version = "3"
features = ["tokio_rt","serde-json","napi8"]
optional = true

[dependencies.napi-derive]
version = "3"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"
features = ["macros","rt-multi-thread"]

[dependencies.tokio-util]
version = "0.7.16"

[dependencies.codex-common]
path = "../../codex-rs/common"

[dependencies.codex-arg0]
path = "../../codex-rs/arg0"

[dependencies.codex-core]
path = "../../codex-rs/core"

[dependencies.toml]
version = "0.9.5"

[dependencies.codex-exec]
path = "../../codex-rs/exec"

[dependencies.codex-protocol]
path = "../../codex-rs/protocol"

[dependencies.codex-cloud-tasks-client]
path = "../../codex-rs/cloud-tasks-client"

[dependencies.codex-tui]
path = "../../codex-rs/tui"

[dependencies.codex-apply-patch]
path = "../../codex-rs/apply-patch"

[dependencies.tiktoken-rs]
version = "0.9"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
pretty_assertions = "1"

[features]
default = ["napi-bindings"]
napi-bindings = ["napi", "napi-derive"]

[profile.release]
lto = true

# The upstream crates have not yet released the fixes required for the Codex TUI:
# - ratatui: pending patch to expose color/style APIs needed by codex-tui
# - crossterm: pending fix for color querying on macOS 13+/Linux
# These overrides point to the upstream authors' branches until new crates.io
# releases land. Keep this block in sync with upstream progress.
[patch.crates-io]
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
tokio-tungstenite = { git = "https://github.com/JakkuSakura/tokio-tungstenite", rev = "2ae536b0de793f3ddf31fc2f22d445bf1ef2023d" }

[patch."ssh://git@github.com/JakkuSakura/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/JakkuSakura/tungstenite-rs", rev = "f514de8644821113e5d18a027d6d28a5c8cc0a6e" }

[patch."ssh://git@github.com/JakkuSakura/tungstenite-rs.git?branch=proxy-support"]
tungstenite = { git = "https://github.com/JakkuSakura/tungstenite-rs", rev = "f514de8644821113e5d18a027d6d28a5c8cc0a6e" }
